--- a/src/components/contextMenu/ContextMenu.module.scss
+++ b/src/components/contextMenu/ContextMenu.module.scss
@@ -1,5 +1,5 @@
 .wrap {
-  @apply bg-white absolute top-0 left-1/2 p-3 shadow z-10;
+  @apply bg-white absolute top-0 right-3 p-3 shadow z-10;
 
   .btn {
     @apply text-red-500 font-medium;
